# serializer version: 1
# name: test_attach_files
  dict({
    '_id': 'foo',
    'files': list([
      dict({
        'download_url': 'https://virtool.example.com/api/indexes/foo/files/reference.1.bt2',
        'id': 1,
        'index': 'foo',
        'name': 'reference.1.bt2',
        'size': 1234567,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/indexes/foo/files/reference.2.bt2',
        'id': 2,
        'index': 'foo',
        'name': 'reference.2.bt2',
        'size': 1234567,
        'type': 'bowtie2',
      }),
    ]),
    'reference': dict({
      'id': 'bar',
    }),
  })
# ---
# name: test_create[None]
  dict({
    '_id': 'bf1b993c',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': dict({
      'id': 'bar',
    }),
    'manifest': 'manifest',
    'ready': False,
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'test',
    }),
    'version': 0,
  })
# ---
# name: test_create[None].1
  dict({
    '_id': 'abc',
    'index': dict({
      'id': 'bf1b993c',
      'version': 0,
    }),
    'reference': dict({
      'id': 'foo',
    }),
  })
# ---
# name: test_create[abc]
  dict({
    '_id': 'abc',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': dict({
      'id': 'bar',
    }),
    'manifest': 'manifest',
    'ready': False,
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'test',
    }),
    'version': 0,
  })
# ---
# name: test_create[abc].1
  dict({
    '_id': 'abc',
    'index': dict({
      'id': 'abc',
      'version': 0,
    }),
    'reference': dict({
      'id': 'foo',
    }),
  })
# ---
